--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_screenutil: ^5.9.0
   auto_route: ^8.1.3
+  flutter_bloc: ^8.1.5
+  freezed_annotation: ^2.4.1
   
 
 dev_dependencies:
@@ -51,6 +53,7 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   auto_route_generator: ^8.0.0
   build_runner: ^2.4.8
+  freezed: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
