--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   auto_route: ^8.1.3
   flutter_bloc: ^8.1.5
   freezed_annotation: ^2.4.1
+  google_sign_in: ^6.2.1
   
 
 dev_dependencies:
